@@ -1,3 +1,9 @@
+2008-09-03  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* sb-itmedia.el (shimbun-itmedia-content-start): New variable.
+	(shimbun-itmedia-content-end): New variable.
+	(shimbun-clear-contents): Call the parents' method for the +D groups.
+
 2008-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-kantei.el (shimbun-kantei-url): Update.
